# lab-spo

./: CMakeLists.txt  course.cpp  lab1.cpp  lab2.cpp  lab3.cpp  lab4.cpp  lab4_proc.cpp  lab5.cpp  lab6.cpp
