cmake_minimum_required(VERSION 3.12)
project(spo)

set(CMAKE_CXX_STANDARD 17)

add_executable(spo course.cpp)
#add_executable(spo lab6.cpp)
#add_executable(spo lab5.cpp)
#add_executable(spo lab3.cpp)
#add_executable(spo lab4.cpp)
#add_executable(spo lab4_proc.cpp)
#add_library(libdll SHARED lab1.cpp lab2.cpp)
#SET_TARGET_PROPERTIES(libdll PROPERTIES LINK_FLAGS "lab6.obj lab7.obj")